--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "@avalanche/eslint-config": "^1.0.2",
-    "jest": "^22.1.2"
+    "eslint": "^4.16.0",
+    "eslint-plugin-import": "^2.8.0",
+    "jest": "^22.1.4"
   },
   "engines": {
     "node": ">= 9.0.0",
